# pyconus_2025

./: LICENSE  README.md  pyproject.toml
src/: 1_intro_v1.py  1_intro_v2.py  2_type_guard.py  2_type_is.py  2_typing_extention.py  3_pre-commit-ruff.yaml  3_pyupgrade_in_aciton_after.py  3_pyupgrade_in_aciton_before.py  3_pyupgrade_in_aciton_ruff.py  3_ruff_cehck_up.sh  4_pre_commit_ci.yaml  4_type_ignore_after_.py  4_type_ignore_after_bug.py  4_type_ignore_before.py  4_type_ignore_before_bug.py  5_mirascope_call_params_bug.py  5_mirascope_definition.py  5_mirascope_example.py
